--- a/src/app/game/ship/ship.component.css
+++ b/src/app/game/ship/ship.component.css
@@ -1,19 +1,8 @@
 .ship-container {
   display: inline-block;
   float: left;
-  margin-bottom: 5px;
-  height: 50px;
-  -webkit-filter: blur(1px);
-  -moz-filter: blur(1px);
-  -o-filter: blur(1px);
-  -ms-filter: blur(1px);
-  filter: blur(1px);}
-.ship-container:hover{
-  -webkit-filter: blur(0);
-  -moz-filter: blur(0);
-  -o-filter: blur(0);
-  -ms-filter: blur(0);
-  filter: blur(0);}
+  margin: 5px;
+  height: 50px; }
   .ship-container .ship-back {
     display: inline-block;
     float: left;
